@@ -30,7 +30,6 @@ import com.powsybl.sensitivity.factors.functions.BranchFlow;
 import com.powsybl.sensitivity.factors.variables.InjectionIncrease;
 import com.powsybl.sensitivity.factors.variables.LinearGlsk;
 import com.powsybl.sensitivity.factors.variables.PhaseTapChangerAngle;
-import org.apache.commons.lang3.tuple.Pair;
 import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormat;
 import org.junit.jupiter.api.Test;
@@ -1071,17 +1070,6 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         Network network = HvdcNetworkFactory.createNetworkWithGenerators();
         network.getGeneratorStream().forEach(gen -> gen.setMaxP(2 * gen.getMaxP()));
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
-
-        List<Pair<String, String>> variableAndFunction = List.of(
-            Pair.of("hvdc34", "l12"),
-            Pair.of("hvdc34", "l13"),
-            Pair.of("hvdc34", "l23"),
-            Pair.of("hvdc34", "l25"),
-            Pair.of("hvdc34", "l45"),
-            Pair.of("hvdc34", "l46"),
-            Pair.of("hvdc34", "l56")
-        );
-
         Network network1 = HvdcNetworkFactory.createNetworkWithGenerators();
         network1.getGeneratorStream().forEach(gen -> gen.setMaxP(2 * gen.getMaxP()));
         network1.getLine("l25").getTerminal1().disconnect();
@@ -1099,18 +1087,19 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                 line -> (network1.getLine(line).getTerminal1().getP() - network2.getLine(line).getTerminal1().getP()) / sensiChange
             ));
 
-        HvdcWriter hvdcWriter = HvdcWriter.create();
-        SensitivityFactorReader reader = createHvdcReader(variableAndFunction);
-        sensiProvider.run(network, Collections.singletonList(new Contingency("l25", new BranchContingency("l25"))), Collections.emptyList(),
-            sensiParameters, reader, hvdcWriter);
+        ContingencyContext contingencyContext = ContingencyContext.createAllContingencyContext();
+        List<SensitivityFactor2> factors = SensitivityFactor2.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
+                                                                           SensitivityVariableType.HVDC_INJECTION, List.of("hvdc34"), true, contingencyContext);
+        SensitivityAnalysisResult2 result = sensiProvider.run(network, Collections.singletonList(new Contingency("l25", new BranchContingency("l25"))), Collections.emptyList(),
+                sensiParameters, factors);
 
-        assertEquals(loadFlowDiff.get("l12"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l12"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(loadFlowDiff.get("l13"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l13"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(loadFlowDiff.get("l23"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l23"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l25"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(loadFlowDiff.get("l45"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l45"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(loadFlowDiff.get("l46"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l46"), "l25"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(loadFlowDiff.get("l56"), hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l56"), "l25"), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l12"), result.getValue("l25", "l12", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l13"), result.getValue("l25", "l13", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l23"), result.getValue("l25", "l23", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("l25", "l25", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l45"), result.getValue("l25", "l45", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l46"), result.getValue("l25", "l46", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(loadFlowDiff.get("l56"), result.getValue("l25", "l56", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
     }
 
     @Test
@@ -1121,28 +1110,20 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         network.getGeneratorStream().forEach(gen -> gen.setMaxP(2 * gen.getMaxP()));
         SensitivityAnalysisParameters sensiParameters = createParameters(true, "b1_vl_0", true);
 
-        List<Pair<String, String>> variableAndFunction = List.of(
-            Pair.of("hvdc34", "l12"),
-            Pair.of("hvdc34", "l13"),
-            Pair.of("hvdc34", "l23"),
-            Pair.of("hvdc34", "l25"),
-            Pair.of("hvdc34", "l45"),
-            Pair.of("hvdc34", "l46"),
-            Pair.of("hvdc34", "l56")
-        );
+        ContingencyContext contingencyContext = ContingencyContext.createAllContingencyContext();
+        List<SensitivityFactor2> factors = SensitivityFactor2.createMatrix(SensitivityFunctionType.BRANCH_ACTIVE_POWER, List.of("l12", "l13", "l23", "l25", "l45", "l46", "l56"),
+                                                                           SensitivityVariableType.HVDC_INJECTION, List.of("hvdc34"), true, contingencyContext);
 
-        HvdcWriter hvdcWriter = HvdcWriter.create();
-        SensitivityFactorReader reader = createHvdcReader(variableAndFunction);
-        sensiProvider.run(network, Collections.singletonList(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"))), Collections.emptyList(),
-            sensiParameters, reader, hvdcWriter);
+        SensitivityAnalysisResult2 result = sensiProvider.run(network, Collections.singletonList(new Contingency("hvdc34", new HvdcLineContingency("hvdc34"))), Collections.emptyList(),
+                sensiParameters, factors);
 
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l12"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l13"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l23"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l25"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l45"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l46"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0d, hvdcWriter.getSensitivityValue(Pair.of("hvdc34", "l56"), "hvdc34"), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l12", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l13", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l23", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l25", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l45", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l46", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0d, result.getValue("hvdc34", "l56", "hvdc34").getValue(), LoadFlowAssert.DELTA_POWER);
     }
 
     @Test
@@ -1673,7 +1654,7 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
                                                                           SensitivityVariableType.INJECTION_ACTIVE_POWER, "g2", false,
                                                                           ContingencyContext.createAllContingencyContext()));
 
-        List<SensitivityValue2> values = sensiProvider.run(network, contingencies, variableSets, sensiParameters, factors);
+        SensitivityAnalysisResult2 result = sensiProvider.run(network, contingencies, variableSets, sensiParameters, factors);
 
         Path contingenciesFile = null;
         Path factorsFile = null;
@@ -1730,11 +1711,11 @@ class DcSensitivityAnalysisContingenciesTest extends AbstractSensitivityAnalysis
         List<SensitivityValue2> values2 = sensiProvider.replay(date, fileSystem.getPath(debugDir));
 
         // assert we have exactly the same result with replay
-        assertEquals(values.size(), values2.size());
-        for (int i = 0; i < values.size(); i++) {
-            assertEquals(values.get(i).getContingencyId(), values2.get(i).getContingencyId());
-            assertEquals(values.get(i).getValue(), values2.get(i).getValue(), LoadFlowAssert.DELTA_POWER);
-            assertEquals(values.get(i).getFunctionReference(), values2.get(i).getFunctionReference(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(result.getValues().size(), values2.size());
+        for (int i = 0; i < result.getValues().size(); i++) {
+            assertEquals(result.getValues().get(i).getContingencyId(), values2.get(i).getContingencyId());
+            assertEquals(result.getValues().get(i).getValue(), values2.get(i).getValue(), LoadFlowAssert.DELTA_POWER);
+            assertEquals(result.getValues().get(i).getFunctionReference(), values2.get(i).getFunctionReference(), LoadFlowAssert.DELTA_POWER);
         }
     }
 
